--- a/exames.html
+++ b/exames.html
@@ -20,6 +20,14 @@
         <img src="https://flagcdn.com/w20/cn.png" onclick="changeLanguage('zh')" alt="ZH" title="中文">
         <img src="https://flagcdn.com/w20/jp.png" onclick="changeLanguage('ja')" alt="JA" title="日本語">
         <img src="https://flagcdn.com/w20/sa.png" onclick="changeLanguage('ar')" alt="AR" title="العربية">
+        <img src="https://flagcdn.com/w20/ru.png" onclick="changeLanguage('ru')" alt="RU" title="Русский">
+        <img src="https://flagcdn.com/w20/kr.png" onclick="changeLanguage('ko')" alt="KO" title="한국어">
+        <img src="https://flagcdn.com/w20/pl.png" onclick="changeLanguage('pl')" alt="PL" title="Polski">
+        <img src="https://flagcdn.com/w20/vn.png" onclick="changeLanguage('vi')" alt="VI" title="Tiếng Việt">
+        <img src="https://flagcdn.com/w20/th.png" onclick="changeLanguage('th')" alt="TH" title="ไทย">
+        <img src="https://flagcdn.com/w20/id.png" onclick="changeLanguage('id')" alt="ID" title="Bahasa Indonesia">
+        <img src="https://flagcdn.com/w20/ph.png" onclick="changeLanguage('tl')" alt="TL" title="Tagalog">
+        <img src="https://flagcdn.com/w20/tr.png" onclick="changeLanguage('tr')" alt="TR" title="Türkçe">
     </div>
 
     <header>
